fix(inputs): align shared header and fieldset spacing

--- a/packages/toolkit/components/fieldset/_fieldset.scss
+++ b/packages/toolkit/components/fieldset/_fieldset.scss
@@ -56,3 +56,11 @@
   font-weight: inherit;
   margin: 0;
 }
+
+.ofh-fieldset > .ofh-form-group {
+  @include ofh-responsive-margin(24, 'bottom');
+}
+
+.ofh-fieldset > .ofh-form-group:last-of-type {
+  margin-bottom: 0;
+}
