--- a/packages/toolkit/components/input/_input.scss
+++ b/packages/toolkit/components/input/_input.scss
@@ -20,18 +20,23 @@
   @include ofh-responsive-margin(16, 'bottom');
 }
 
-.ofh-input__label,
-.ofh-input__hint,
-.ofh-input__error-message {
+.ofh-input__header > .ofh-label.ofh-input__label,
+.ofh-input__header > .ofh-error-message.ofh-input__error-message {
   margin-bottom: 0;
+}
+
+.ofh-input__header > .ofh-hint.ofh-input__hint {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.ofh-input__header > .ofh-label + .ofh-hint.ofh-input__hint {
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .ofh-input__label {
   font-weight: $ofh-typography-weight-semibold;
-}
-
-.ofh-input__error-message {
-  clear: none;
 }
 
 .ofh-input__legend {
@@ -40,6 +45,10 @@
 
 .ofh-input__legend--with-supporting-text {
   margin-bottom: 0;
+}
+
+.ofh-input__error-message {
+  clear: none;
 }
 
 .ofh-input__legend--with-supporting-text + .ofh-input__header {
